# pulmonary-artery-analysis

./: .gitignore  main.py  pyproject.toml
classification/: classifier.py  loader.py  preprocessing.py  utils.py
core/: config.py  processor.py
data/: config.json
models/: load_models.py
pa_analysis/: entity.py
pa_analysis/cv/: processing.py
pa_analysis/post_analysis/: analyze.py
report_generation/: report.py
segmentation/: loader.py  ml_model.py  postprocessing.py  preprocessing.py  segmentator.py
templates/: report.html
ui/: main_window.py  settings_window.py
utils/: cv.py
utils/image_reader/: image_reader.py  models.py
weights/: model_resnet_1stack  segnet_aug_dice_weights_50_epoch
