[project]
name = "pulmonary-artery-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "opencv-python (<=4.11)",
    "pillow (>=12.0.0,<13.0.0)",
    "skan (>=0.13.0,<0.14.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "weasyprint (>=67.0,<68.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
